k8s/11-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: banking-logs
  namespace: banking
spec:
  selector:
    matchLabels:
      app: banking-logs
  template:
    metadata:
      labels:
        app: banking-logs
    spec:
      containers:
      - name: fluentd
        image: fluent/fluentd:v1.15
        volumeMounts:
        - name: varlog
          mountPath: /var/log
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
