k8s/10-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: banking-network-policy
  namespace: banking
spec:
  podSelector:
    matchLabels:
      app: banking-api   # الـ Pods اللي السياسة هتطبق عليهم
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: banking-dashboard  # Dashboard بس يقدر يوصل للـ API
    ports:
    - protocol: TCP
      port: 3000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres-db     # API بس يقدر يوصل للـ DB
    ports:
    - protocol: TCP
      port: 5432
